Fix question box z-index

--- a/css/temp.css
+++ b/css/temp.css
@@ -21,7 +21,6 @@
 .image-with-text__question-box {
     position: fixed;
     top: 11em;
-    z-index: -9991;
     right: 0;
     width: 18%;
     color: var(--colour-pale);
